# toastmm

./: .clang-format  .gitignore  CMakeLists.txt  HISTORY.md  NOTES.md  README.md  arch.h  pyproject.toml  setup.py  toastdef.h
.github/workflows/: build_mex.yml  build_wheels.yml  test_lib.yml
examples/python/: fwd1.py  pmdf.py  recon1.py  recon2.py
include/: blasnames.h  toastdef.h
perf/matlab/: perf_1.m  perf_fields.m  perf_jacobian.m
script/matlab/: demos.xml  toast_setup.m
script/matlab/demos/: toast_demo6.m
script/matlab/docs/: info.xml
script/matlab/docs/html/tutorials/: demo_matlab_rec2.m
script/matlab/docs/html/tutorials/demo_fwd1/: demo_matlab_fwd1.html
script/matlab/docs/html/tutorials/demo_fwd4/: demo_matlab_fwd4.html
script/matlab/examples/: assemble_sysmat.m  basis_operations.m  element_integrals.m  fwd0.m  fwd1.m  fwd1_aniso.m  fwd1_aniso3D.m  mesh_operations.m  recon_cg.m  recon_gn.m  recon_lm.m  recon_meshbasis.m  recon_prior.m
script/matlab/examples/fluorescence/: fluorescence_ex1.m
script/matlab/html/: helptoc.xml  toast.html
script/matlab/html/tutorials/: demos_matlab.html
script/matlab/html/tutorials/demo_fwd2/: demo_matlab_fwd2.html
script/matlab/html/tutorials/demo_fwd3/: demo_matlab_fwd3.html
script/matlab/html/tutorials/demo_fwd4/: demo_matlab_fwd4.html
script/matlab/html/tutorials/demo_nonunique/: demo_nonunique.html
script/matlab/toast/: dotXToMuaMus.m  toastFields.m  toastJacobian.m  toastJacobianCW.m  toastProject.m  toastShowMesh.m  toastSolver.m  toastVersion.m
script/matlab/toast2/: toastFields.m  toastJacobianCW.m
script/python/examples/: fwd1.py  fwd2.py  fwd3.py  pmdf.py  recon1.py  recon2.py  recon3.py
script/python/tutorials/: fwd1.py  fwd2.py  pmdf.py  recon1.py  recon2.py  recon3.py
src/bintools/: CMakeLists.txt  cmpvec.cc  lin2cubicmesh.cc  lin2quadmesh.cc  opt2.cc  quad2linmesh.cc
src/common/: calc_gradient.cc  calc_gradient.h  calc_jacobian.cc  calc_jacobian.h  calc_mesh.cc  calc_mesh.h  calc_qmvec.cc  calc_qmvec.h
src/libfdot/: CMakeLists.txt  FDOTFwd.cc  FDOTFwd.h  MLEMSolver.cc  MLEMSolver.h  fluoSolver.h  matrixFreeSolver.cc  matrixFreeSolver.h  muaSolver.cc  muaSolver.h  util.cc  util.h
src/libfe/: CMakeLists.txt  cub8_reg.h  element.cc  element.h  ellist.cc  felib.h  line2d2.h  mesh.cc  mesh.h  ndlist.cc  ndlist.h  node.cc  param.h  pix4.cc  pix4.h  qmmesh.cc  qmmesh.h  quad4.h  refine_mesh.cc  tet10.cc  tet10.h  tet10_ip.h  tet4.cc  tet4.h  tri10.cc  tri10.h  tri10_ip.h  tri3.cc  tri3.h  tri3D3.h  tri3D6.h  tri3_qr.cc  tri3_qr.h  tri3old.cc  tri3old.h  tri6.cc  tri6.h  tri6_ip.h  vox27.h  vox8.h  (+4 more)
src/libmath/: CMakeLists.txt  cr_cholesky.cc  crmatrix.cc  crmatrix.h  crmatrix_cm.cc  crmatrix_imp.hpp  dgmatrix.cc  dgmatrix.h  dgmatrix_imp.hpp  dnsmatrix.cc  dnsmatrix.h  dnsmatrix_imp.hpp  error.cc  error.h  fourn.h  gmres.cc  gmres_imp.hpp  gsmatrix.h  gsmatrix_imp.hpp  mathdef.h  mathlib.h  matrix.cc  matrix.h  matrix_imp.hpp  nr.cc  precon.h  precon_imp.hpp  sycrmatrix.cc  sycrmatrix.h  symatrix.cc  symatrix.h  symatrix_imp.hpp  task.cc  task.h  timing.cc  vector.cc  vector.h  vector_imp.hpp
src/libraster/: CMakeLists.txt  mwsolution.cc  mwsolution.h  raster.cc  raster.h  raster2.cc  raster2.h  raster_bb.cc  raster_bb.h  raster_bb2.cc  raster_bb2.h  raster_bl.cc  raster_bl.h  raster_blob2.cc  raster_blob2.h  raster_blob2_tet.cc  raster_blob2_tri.cc  raster_cp.cc  raster_cp.h  raster_cpx.cc  raster_cpx.h  raster_cpx_tet.cc  raster_cpx_tree.cc  raster_cpx_tree.h  raster_cpx_tree_tri.cc  raster_cpx_tri.cc  raster_cs.h  raster_cs2.cc  raster_cs2.h  raster_gb.cc  raster_gb.h  raster_gb2.cc  raster_gb2.h  raster_hb.cc  raster_hb.h  raster_hb2.cc  raster_hb2.h  raster_px.cc  raster_px.h  raster_px2.cc  (+15 more)
src/libstoast/: CMakeLists.txt  fwdsolver.cc  fwdsolver.h  fwdsolver_mw.cc  fwdsolver_mw.h  jacobian.cc  jacobian.h  mwsolution.cc  mwsolution.h  of.cc  pparse.cc  projector.h  raster_blob2_tri.cc  raster_px2_tri.cc  spdirect.cc  spdirect.h  stoastlib.h
src/matlab/: CMakeLists.txt  matlabtoast.cc  mtJacobian.cc  mtMesh.cc  mtProjector.cc  mtQMvec.cc  mtRegul.cc  toastmex.cc  toastmex.h  util.cc
src/matlab2/: CMakeLists.txt  matlabtoast.cc  matlabtoast.h  mexutil.cc  mtBasis.cc  mtElement.cc  mtField.cc  mtGradient.cc  mtJacobian.cc  mtMesh.cc  mtProjector.cc  mtQMvec.cc  mtRegul.cc  mtSysmat_basis.cc  toastmex.cc  toastmex.h
src/python/: CMakeLists.txt  README.md  pyproject.toml  setup.py  setup.py.in  toastmodule.cc
src/python/toast/: __init__.py  element.py  mesh.py  raster.py  regul.py  util.py
src/python/toastmm/: __init__.py  element.py  mesh.py  raster.py  regul.py  tglumpy.py  util.py
src/supertoast/: CMakeLists.txt  fwdfem.cc  fwdfem_cw.cc  fwdfem_tpsf.cc  solverart.cc  solverblockart.cc  solverlbfgs_cw_mw.cc  solverlbfgs_mw.cc  solverlm.cc  solverlm2_cw_mw.cc  solverlm2_mw.cc  solverlm_cw_mw.cc  solverlm_mw.cc  solverpcg.cc  solverpcg_cw_mw.cc  solverpcg_mw.cc  supertoast.cc  supertoast_cw_mw.cc  supertoast_mw.cc  supertoast_util.cc  test_adaptive.cc  test_basis.cc  test_edd.cc  util.cc
src/toast/: toast.cc
test/: Makefile
test/2D/fwdfem/: Makefile
test/2D/supertoast/: Makefile
test/3D/fwdfem/: Makefile
test/3D/matlab/: fieldsimpl.m  jacobiancw.m
test/3D/supertoast/: Makefile
