[build-system]
requires = ["setuptools", "wheel", "numpy >= 2"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.cibuildwheel]

# Disable 32-bit builds, PyPy builds, musl
# NB: musl can be re-enabled if Intel TBB headers are installed
#     for this target.
skip = ["*-win32", "*_i686", "pp*", "*-musllinux*"]

# Build the library in the docker container for good core deps
before-all = [
     "mkdir build", 
     "cd build",
     "cmake ../",
     "cmake --build . --target install --config Release",
     "cd .."
     ]
