[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.cibuildwheel]

# Disable 32-bit builds, PyPy builds
skip = ["*-win32", "*-manylinux_i686", "pp*"]

# Build the library in the docker container for good core deps. The build directory will
# already be set up because CMake configuration step is run in the host to generate the 
# appropriate files before build.
before-all = [
     "cd build",
     "cmake ../",
     "cmake --build . --target INSTALL --config Release",
     "cd .."
     ]

